--- a/package.json
+++ b/package.json
@@ -8,9 +8,18 @@
     "@testing-library/user-event": "^13.5.0",
     "ansi-to-html": "^0.7.2",
     "bootstrap": "^5.3.2",
+    "crypto-browserify": "^3.12.0",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
+    "portable-fetch": "^3.0.0",
+    "querystring": "^0.2.1",
+    "querystring-es3": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
+    "request": "^2.88.2",
+    "superagent": "^8.1.2",
+    "url": "^0.11.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -36,5 +45,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@openapitools/openapi-generator-cli": "^2.7.0",
+    "dotenv": "^16.3.1",
+    "i": "^0.3.7"
   }
 }
